20070530 tape.c: tidy up audiofile missing error message (Fred).
20070530 acinclude.m4: remove warning about underquoted definition (Stuart).
20070531 tape.c: fix loading with tape traps (thanks, Stuart Brady) (Fred).
20070601 tape_accessors.txt: add data accessor for rle_pulse block (Fred).
20070602 rzx.c,wav.c: fix up printf() related warnings.
20070602 Ignore make-perl.exe and test/test.exe (Stuart).
20070604 libspectrum.h.in,libspectrum.c: allow Amiga version to decompress
         files with xfdmaster.library (part of patch #1712260) (Chris Young).
20070606 tzx_write.c: add write support for libspectrum RLE block by converting
         to a TZX DRB block due to the limited program support for the TZX
         CSW block (Fred).
20070608 libspectrum.c: add .snapshot as an extension for SNA files as it was
         used by Peter McGavin's Spectrum Emulator on the Amiga (Fred).
20070608 doc/libspectrum.3: fix dashes (Stuart).
20070608 csw.c,wav.c: update FSF address (Stuart).
20070609 BRANCH: plusd_20070609
20070617 libspectrum.{c,h.in}: add support for +D disk images (plusd_20070609).
	 (part of patch #1738602).
20070617 merge plusd_20070609 branch into trunk (Stuart).
20070628 make-perl.c: fix compilation on 64-bit systems without glib (Stuart).
20070628 microdrive.c: remove "'static' is not at beginning of declaration"
	 warning with -Wextra (Stuart).
20070628 rzx.c,timings.c: remove missing initializer warnings with -Wextra
	 (Stuart).
20070703 libspectrum.c,tape.c: patches for MorphOS (patch #1746269) (Q-Master).
20070713 test/{invalid.gz,test.c}: add test for bug #1753279.
20070713 libspectrum.c,test/{invalid.gz,test.c}: don't free the wrong things
	 or things that haven't been allocated; add another test case.
20070715 szx.c,test/{invalid.szx,test.c}: check whether the chunk length was
	 so large it caused pointer wraparound (fixes bug #1753938).
20070715 z80.c: free memory used by page with unknown number (fixes bug
	 #1754362).